--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -12,3 +12,6 @@
 @import pages/basket
 @import pages/order
 @import pages/news
+@import pages/machine
+@import pages/pictures
+@import pages/clothes
