--- a/src/sass/components/_product.sass
+++ b/src/sass/components/_product.sass
@@ -230,7 +230,7 @@
 			flex-basis: 62.5%
 		+xs
 			flex-basis: 100%
-	&__examples_x4
+	&__examples_default
 		width: 100%
 		flex-basis: 100%
 		flex-wrap: wrap
