--- a/src/templates/news-page.jade
+++ b/src/templates/news-page.jade
@@ -35,7 +35,7 @@ block content
 						+e.post-descr
 							+e.P В данный момент закончена установка оборудования, плоттеры для печати чертежей расставлены на специальные конструкции, с дополнительными роликами бумаги для печати. Это усиливает снижение себестоимости, надёжность в непрерывности печати и её скорость. Сделаны большие корзины-приёмники для чертежей. Придя к нам, вы точно выиграете в цене, качестве печати и Сделаны большие корзины-приёмники для чертежей. Придя к нам, вы точно выиграете в цене, качестве печати и кнррнренрер еоео6нгоно ноеноеноен  для чертежей. Придя к нам, вы точно выиграете в цене, качестве печати и
 							+e.P В данный момент закончена установка оборудования, плоттеры для печати чертежей расставлены на специальные конструкции, с дополнительными роликами бумаги для печати. Это усиливает снижение себестоимости, надёжность в непрерывности печати и её скорость. Сделаны большие корзины-приёмники для чертежей. Придя к нам, вы точно выиграете в цене, качестве печати и Сделаны большие корзины-приёмники для чертежей. Сделаны большие корзины-приёмники для чертежей. Придя к нам, вы точно выиграете в цене, качестве печати и Сделаны большие корзины-приёмники для чертежей.
-							+e.BUTTON.post-more-btn.js-more-text(type='button')
+							+e.BUTTON.post-more-btn.js-more-text-news(type='button')
 								+icon('icon-arr-def', 'news__post-more-icon')
 								= ' '
 								+e.SPAN Показать полностью
@@ -54,7 +54,7 @@ block content
 						+e.post-descr
 							+e.P В данный момент закончена установка оборудования, плоттеры для печати чертежей расставлены на специальные конструкции, с дополнительными роликами бумаги для печати. Это усиливает снижение себестоимости, надёжность в непрерывности печати и её скорость. Сделаны большие корзины-приёмники для чертежей. Придя к нам, вы точно выиграете в цене, качестве печати и Сделаны большие корзины-приёмники для чертежей. Придя к нам, вы точно выиграете в цене, качестве печати и кнррнренрер еоео6нгоно ноеноеноен  для чертежей. Придя к нам, вы точно выиграете в цене, качестве печати и
 							+e.P В данный момент закончена установка оборудования, плоттеры для печати чертежей расставлены на специальные конструкции, с дополнительными роликами бумаги для печати. Это усиливает снижение себестоимости, надёжность в непрерывности печати и её скорость. Сделаны большие корзины-приёмники для чертежей. Придя к нам, вы точно выиграете в цене, качестве печати и Сделаны большие корзины-приёмники для чертежей. Сделаны большие корзины-приёмники для чертежей. Придя к нам, вы точно выиграете в цене, качестве печати и Сделаны большие корзины-приёмники для чертежей.
-							+e.BUTTON.post-more-btn.js-more-text(type='button')
+							+e.BUTTON.post-more-btn.js-more-text-news(type='button')
 								+icon('icon-arr-def', 'news__post-more-icon')
 								= ' '
 								+e.SPAN Показать полностью
@@ -73,7 +73,7 @@ block content
 						+e.post-descr._important
 							+e.P В данный момент закончена установка оборудования, плоттеры для печати чертежей расставлены на специальные конструкции, с дополнительными роликами бумаги для печати. Это усиливает снижение себестоимости, надёжность в непрерывности печати и её скорость. Сделаны большие корзины-приёмники для чертежей. Придя к нам, вы точно выиграете в цене, качестве печати и Сделаны большие корзины-приёмники для чертежей. Придя к нам, вы точно выиграете в цене, качестве печати и кнррнренрер еоео6нгоно ноеноеноен  для чертежей. Придя к нам, вы точно выиграете в цене, качестве печати и
 							+e.P В данный момент закончена установка оборудования, плоттеры для печати чертежей расставлены на специальные конструкции, с дополнительными роликами бумаги для печати. Это усиливает снижение себестоимости, надёжность в непрерывности печати и её скорость. Сделаны большие корзины-приёмники для чертежей. Придя к нам, вы точно выиграете в цене, качестве печати и Сделаны большие корзины-приёмники для чертежей. Сделаны большие корзины-приёмники для чертежей. Придя к нам, вы точно выиграете в цене, качестве печати и Сделаны большие корзины-приёмники для чертежей.
-							+e.BUTTON.post-more-btn.js-more-text(type='button')
+							+e.BUTTON.post-more-btn.js-more-text-news(type='button')
 								+icon('icon-arr-def', 'news__post-more-icon')
 								= ' '
 								+e.SPAN Показать полностью
@@ -92,7 +92,7 @@ block content
 						+e.post-descr
 							+e.P В данный момент закончена установка оборудования, плоттеры для печати чертежей расставлены на специальные конструкции, с дополнительными роликами бумаги для печати. Это усиливает снижение себестоимости, надёжность в непрерывности печати и её скорость. Сделаны большие корзины-приёмники для чертежей. Придя к нам, вы точно выиграете в цене, качестве печати и Сделаны большие корзины-приёмники для чертежей. Придя к нам, вы точно выиграете в цене, качестве печати и кнррнренрер еоео6нгоно ноеноеноен  для чертежей. Придя к нам, вы точно выиграете в цене, качестве печати и
 							+e.P В данный момент закончена установка оборудования, плоттеры для печати чертежей расставлены на специальные конструкции, с дополнительными роликами бумаги для печати. Это усиливает снижение себестоимости, надёжность в непрерывности печати и её скорость. Сделаны большие корзины-приёмники для чертежей. Придя к нам, вы точно выиграете в цене, качестве печати и Сделаны большие корзины-приёмники для чертежей. Сделаны большие корзины-приёмники для чертежей. Придя к нам, вы точно выиграете в цене, качестве печати и Сделаны большие корзины-приёмники для чертежей.
-							+e.BUTTON.post-more-btn.js-more-text(type='button')
+							+e.BUTTON.post-more-btn.js-more-text-news(type='button')
 								+icon('icon-arr-def', 'news__post-more-icon')
 								= ' '
 								+e.SPAN Показать полностью
@@ -111,7 +111,7 @@ block content
 						+e.post-descr
 							+e.P В данный момент закончена установка оборудования, плоттеры для печати чертежей расставлены на специальные конструкции, с дополнительными роликами бумаги для печати. Это усиливает снижение себестоимости, надёжность в непрерывности печати и её скорость. Сделаны большие корзины-приёмники для чертежей. Придя к нам, вы точно выиграете в цене, качестве печати и Сделаны большие корзины-приёмники для чертежей. Придя к нам, вы точно выиграете в цене, качестве печати и кнррнренрер еоео6нгоно ноеноеноен  для чертежей. Придя к нам, вы точно выиграете в цене, качестве печати и
 							+e.P В данный момент закончена установка оборудования, плоттеры для печати чертежей расставлены на специальные конструкции, с дополнительными роликами бумаги для печати. Это усиливает снижение себестоимости, надёжность в непрерывности печати и её скорость. Сделаны большие корзины-приёмники для чертежей. Придя к нам, вы точно выиграете в цене, качестве печати и Сделаны большие корзины-приёмники для чертежей. Сделаны большие корзины-приёмники для чертежей. Придя к нам, вы точно выиграете в цене, качестве печати и Сделаны большие корзины-приёмники для чертежей.
-							+e.BUTTON.post-more-btn.js-more-text(type='button')
+							+e.BUTTON.post-more-btn.js-more-text-news(type='button')
 								+icon('icon-arr-def', 'news__post-more-icon')
 								= ' '
 								+e.SPAN Показать полностью
@@ -130,7 +130,7 @@ block content
 						+e.post-descr
 							+e.P В данный момент закончена установка оборудования, плоттеры для печати чертежей расставлены на специальные конструкции, с дополнительными роликами бумаги для печати. Это усиливает снижение себестоимости, надёжность в непрерывности печати и её скорость. Сделаны большие корзины-приёмники для чертежей. Придя к нам, вы точно выиграете в цене, качестве печати и Сделаны большие корзины-приёмники для чертежей. Придя к нам, вы точно выиграете в цене, качестве печати и кнррнренрер еоео6нгоно ноеноеноен  для чертежей. Придя к нам, вы точно выиграете в цене, качестве печати и
 							+e.P В данный момент закончена установка оборудования, плоттеры для печати чертежей расставлены на специальные конструкции, с дополнительными роликами бумаги для печати. Это усиливает снижение себестоимости, надёжность в непрерывности печати и её скорость. Сделаны большие корзины-приёмники для чертежей. Придя к нам, вы точно выиграете в цене, качестве печати и Сделаны большие корзины-приёмники для чертежей. Сделаны большие корзины-приёмники для чертежей. Придя к нам, вы точно выиграете в цене, качестве печати и Сделаны большие корзины-приёмники для чертежей.
-							+e.BUTTON.post-more-btn.js-more-text(type='button')
+							+e.BUTTON.post-more-btn.js-more-text-news(type='button')
 								+icon('icon-arr-def', 'news__post-more-icon')
 								= ' '
 								+e.SPAN Показать полностью
@@ -149,7 +149,7 @@ block content
 						+e.post-descr
 							+e.P В данный момент закончена установка оборудования, плоттеры для печати чертежей расставлены на специальные конструкции, с дополнительными роликами бумаги для печати. Это усиливает снижение себестоимости, надёжность в непрерывности печати и её скорость. Сделаны большие корзины-приёмники для чертежей. Придя к нам, вы точно выиграете в цене, качестве печати и Сделаны большие корзины-приёмники для чертежей. Придя к нам, вы точно выиграете в цене, качестве печати и Сделаны большие корзины-приёмники для чертежей. Придя к нам, вы точно выиграете в цене, качестве печати и
 							+e.P В данный момент закончена установка оборудования, плоттеры для печати чертежей расставлены на специальные конструкции, с дополнительными роликами бумаги для печати. Это усиливает снижение себестоимости, надёжность в непрерывности печати и её скорость. Сделаны большие корзины-приёмники для чертежей. Придя к нам, вы точно выиграете в цене, качестве печати и Сделаны большие корзины-приёмники для чертежей. Сделаны большие корзины-приёмники для чертежей. Придя к нам, вы точно выиграете в цене, качестве печати и Сделаны большие корзины-приёмники для чертежей.
-							+e.BUTTON.post-more-btn.js-more-text(type='button')
+							+e.BUTTON.post-more-btn.js-more-text-news(type='button')
 								+icon('icon-arr-def', 'news__post-more-icon')
 								= ' '
 								+e.SPAN Показать полностью
