--- a/src/templates/machine-page.jade
+++ b/src/templates/machine-page.jade
@@ -12,139 +12,58 @@ block content
 						+icon('icon-house', 'breadcrumbs__icon')
 						= ' '
 						+e.SPAN Главная
-					+e.A.link(href='#!')
-						+e.SPAN Машинная вышивка
 					+e.A.link.is-active(href='#!')
-						+e.SPAN Вышивка имени на полотенце
+						+e.SPAN Машинная вышивка
 
-				+e.bar-title
-					+e.SPAN Артикул: 22
+				+e.bar-title._has-icon
+					+e.SPAN Товары и услуги по машинной вышивке
+					+icon('icon-machine', 'page__bar-title-icon')
 
 			+e.in
 				include components/_rubric-side
 				+e.main
+					+b.SECTION.machine
+						+e.title.title-md ПРЕДСТАВЛЯЕМ ВАМ НОВИНКУ НАШЕГО ПРОИЗВОДСТВА - УСЛУГИ МАШИННОЙ ВЫШИВКИ.
+							br
+							| ЗАГОТОВЛЕН КАТАЛОГ ДИЗАЙНОВ, ИЗГОТОВЛЕНИЕ ВОЗМОЖНО В ВАШЕМ ПРИСУТСТВИИ, ЗА 20-30 МИНУТ!
+						+e.in
+							+e.pic
+								+e.IMG(src='img/content/machine_img.jpg')
+							+e.text
+								+e.P Вышивка производится на наших заготовках или ваших вещах. Выбирайте из предложенных вариантов каталога и образцов дизайна (для многих моделей мы можем произвести незначительную «коррекцию» дизайна и это не потребует дополнительной оплаты). Свяжитесь с нами для помощи в реализации лично ваших интересных идей. Эти услуги, как и остальные предложенные из нашего каталога - недорогие и соответствуют всем нашим традициям конкурентного ценообразовании. Подберём отдельные цены для работ на крое и дружественного сотрудничества с ателье по пошивам.
+								+e.P Вышивка это современный вариант персонализации изделий, будущее модного, только развивающегося направления одежд!
+									+e.BUTTON.more-content-open.more-content-open.js-more-content-open(type='button')
+										+e.SPAN Показать далее
+										+icon('icon-arr-def', 'more-content-open__icon')
+
+							+e.content
+								+e.content-in.js-more-content
+									+e.content-title Мы предлагаем:
+									+e.UL.content-list
+										+e.LI
+											+e.STRONG - Вышивку по дизайну заказчиков
+										+e.LI
+											+e.STRONG - Отрисовка и подготовка программ
+											= ' '
+											| для машинной вышивки по эскизам заказчиков.
+										+e.LI
+											+e.STRONG - Вышивка на наших заготовках одежды и ваших вещах.
+										+e.LI
+											+e.STRONG - Вышивка шевронов, нашивок,
+											= ' '
+											| сами шевронные ткани есть в наличии.
+										+e.LI
+											+e.STRONG - Готовые дизайнерские подарки с вышивкой из нашего каталога
+											= ' '
+											| - свои наработки, только лучшие макеты и идеи для вышивок. Это детские майки с оригинальными вышивками, майки в подарок для взрослых, полотенца с именами, халаты с вышивкой и многие другие заготовки выбирайте, предлагайте свои идеи!
+								+e.BUTTON.more-content-close.more-content-close.js-more-content-close(type='button')
+									+icon('icon-arr-def', 'more-content-close__icon')
+
 					+b.product
-						+e.FORM(action='#!')
-							+e.card
-								+e.card-col
-									+e.look
-										+e.look-view.js-look-view
-											+e.look-pic
-												+e.IMG(src='img/content/look-img-1.jpg')
-											+e.look-pic
-												+e.IMG(src='img/content/look-img-2.jpg')
-											+e.look-pic
-												+e.IMG(src='img/content/look-img-1.jpg')
-											+e.look-pic
-												+e.IMG(src='img/content/look-img-2.jpg')
-											+e.look-pic
-												+e.IMG(src='img/content/look-img-1.jpg')
-										+e.look-thumbs.js-look-thumbs
-											+e.item-pic._thumb.decor._xs
-												+e.IMG(src='img/content/look-1.jpg')
-												.decor__line
-											+e.item-pic._thumb.decor._xs
-												+e.IMG(src='img/content/look-2.jpg')
-												.decor__line
-											+e.item-pic._thumb.decor._xs
-												+e.IMG(src='img/content/look-3.jpg')
-												.decor__line
-											+e.item-pic._thumb.decor._xs
-												+e.IMG(src='img/content/look-4.jpg')
-												.decor__line
-											+e.item-pic._thumb.decor._xs
-												+e.IMG(src='img/content/look-5.jpg')
-												.decor__line
-									+e.props
-										+e.props-col
-											+e.props-row
-												+e.BUTTON(type='button').wish-add-btn
-												+e.BUTTON(type='button').calc-btn
-													+icon('icon-arr-def', 'product__calc-icon')
-													+e.SPAN Рассчитать свой - заказной дизайн
-											+e.props-row
-												+b.rating._product-card
-													+e.text Оцените данный товар:
-													+e.in.js-rating
-														+e.INPUT.input(id='product-rating-6' value='6' type='radio' name='product-rating')
-														+e.LABEL.icon(for='product-rating-6')
-															+icon('icon-star', 'rating__star')
-														+e.INPUT.input(id='product-rating-5' value='5' type='radio' name='product-rating')
-														+e.LABEL.icon(for='product-rating-5')
-															+icon('icon-star', 'rating__star')
-														+e.INPUT.input(id='product-rating-4' value='4' type='radio' name='product-rating')
-														+e.LABEL.icon(for='product-rating-4')
-															+icon('icon-star', 'rating__star')
-														+e.INPUT.input(id='product-rating-3' value='3' type='radio' name='product-rating')
-														+e.LABEL.icon(for='product-rating-3')
-															+icon('icon-star', 'rating__star')
-														+e.INPUT.input(id='product-rating-2' value='2' type='radio' name='product-rating')
-														+e.LABEL.icon(for='product-rating-2')
-															+icon('icon-star', 'rating__star')
-														+e.INPUT.input(id='product-rating-1' value='1' type='radio' name='product-rating')
-														+e.LABEL.icon(for='product-rating-1')
-															+icon('icon-star', 'rating__star')
-
-												- var socialsClass = '_product-card'
-												include components/_socials
-
-										+e.props-col
-											+e.hashtags
-												+e.A.hashtags-link(href='#!') #полотенце в подарок
-												+e.A.hashtags-link(href='#!') #вышивки на полотенце
-												+e.A.hashtags-link(href='#!') #сувениры с вышивкой
-
-								+e.card-col.product__descr
-									+e.descr-title ВЫШИВКА ИМЕНИ НА ПОЛОТЕНЦЕ,
-										br
-										| БУДЕТ НУЖНОЕ ВАМ ИМЯ И ШРИФТЫ
-									+e.descr-item
-										+e.P
-											+e.STRONG Подарочные полотенца
-											=	' '
-											| - это наша новинка! Приятный, душевный сувенир. Вам стоит обозначить лишь имя будущего владельца. Шрифты подберём какие нужно, макет на утверждение отправим по почте или куда скажете.
-									+e.descr-item
-										+e.P
-											+e.STRONG Дизайн:
-											=  ' '
-											| дизайн  шрифтов предлагается из наработанных нами  ранее, если необходимо что-то эксклюзивное, то можно будет и разработать, за дополнительную оплату.
-									+e.descr-item
-										+e.P
-											+e.STRONG Размер надписи:
-											=  ' '
-											| 200 мм или около того (с мужскую ладонь).
-										+e.P
-											+e.STRONG Макет:
-											=  ' '
-											| макет вышлем вам на утверждение по электронной  почте.
-										+e.P
-											+e.STRONG Срок исполнения:
-											=  ' '
-											| от 30 минут.
-									+e.descr-item
-										+e.P
-											+e.STRONG Стоимость:
-											=  ' '
-											| не учитывает саму заготовку полотенца.  Вы приносите своё или добавляете в корзину дополнительно «чистое» полотенце.
-
-									+e.buy
-										+e.buy-in
-											+e.amount
-												+e.amount-text Количество:
-												+e.amount-count
-													+e.INPUT.amount-input.js-product-amount(type='number' min='1' max='999' value='1' name='')
-											+e.price
-												+e.SPAN 350
-												+icon('icon-ruble')
-										+e.A.link-sale(href='#!').link-sale
-											+e.SPAN Цены на опт.
-									+e.BUTTON.btn-cart.btn-cart(type='submit') ДОБАВИТЬ В КОРЗИНУ
-
-
-						+e.sect._has-filter
+						+e.sect._has-filter._color
 							+e.sect-title
-								+icon('icon-lovers', 'product__sect-icon')
-								+e.SPAN Похожие и сопутствующие товары.
+								+icon('icon-machine', 'product__sect-icon')
+								+e.SPAN Машинная вышивка / Образцы наших работ
 							+e.filter
 								+e.BUTTON.filter-btn(type='button')
 									+icon('icon-filter-down', 'product__filter-icon')
@@ -407,117 +326,11 @@ block content
 								+e.list-item._next
 									+e.list-link(href='#!') Следующая
 
-						+e.watched
-							+e.sect._watched
-								+e.sect-title
-									+icon('icon-watched', 'product__sect-icon')
-									+e.SPAN Просмотренные ранее и рекомендуемые:
-								+e.sect-links._watched
-									+e.sect-link
-										+e.A(href="#!") ВЫШИВКА НА ХАЛАТАХ
-											+e.SPAN.sect-count 9
-									+e.sect-link
-										+e.A(href="#!") ПЕЧАТЬ НА ХОЛСТЕ
-											+e.SPAN.sect-count 16
-									+e.sect-link
-										+e.A(href="#!") КОРПОРАТИВНЫЕ СУВЕНИРЫ
-											+e.SPAN.sect-count 11
-							+e.examples._watched
-								+e.item
-									+e.item-pic-wrap.js-product-item-pic
-										+e.A(href='#!').item-pic.decor
-											+e.IMG.item-img(src="img/content/prod-11.jpg")
-											.decor__line
-										+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
-											+icon('icon-loupe','product__zoom-icon')
-									+e.item-info
-										+e.item-title Любая вышивка на  шевронной ткани, 7 цветов
-											= ' '
-										+e.item-descr Размер: 120х180мм
-									+e.item-buy
-										+e.BUTTON(type="button").cart-add
-											+e.SPAN.price-current 400&nbsp;
-												+icon('icon-ruble','product__val-icon')
-								+e.item
-									+e.item-pic-wrap.js-product-item-pic
-										+e.A(href='#!').item-pic.decor
-											+e.IMG.item-img(src="img/content/prod-12.jpg")
-											.decor__line
-										+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
-											+icon('icon-loupe','product__zoom-icon')
-									+e.item-info
-										+e.item-title Любая вышивка на  полотенце, под  «Золото».
-										+e.item-descr Размер: 250х100 мм
-									+e.item-buy
-										+e.BUTTON(type="button").cart-add
-											+e.SPAN.price-current 400&nbsp;
-												+icon('icon-ruble','product__val-icon')
-								+e.item
-									+e.item-pic-wrap.js-product-item-pic
-										+e.A(href='#!').item-pic.decor
-											+e.IMG.item-img(src="img/content/prod-10.jpg")
-											.decor__line
-										+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
-											+icon('icon-loupe','product__zoom-icon')
-									+e.item-info
-										+e.item-title Полотенце -зайчик!
-											= ' '
-										+e.item-descr Услуга - сворачивание полотенец в виде  зайчиков, для подарка.
-									+e.item-buy
-										+e.BUTTON(type="button").cart-add
-											+e.SPAN.price-current 150&nbsp;
-												+icon('icon-ruble','product__val-icon')
-								+e.item
-									+e.item-pic-wrap.js-product-item-pic
-										+e.A(href='#!').item-pic.decor
-											+e.IMG.item-img(src="img/content/prod-11.jpg")
-											.decor__line
-										+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
-											+icon('icon-loupe','product__zoom-icon')
-									+e.item-info
-										+e.item-title Любая вышивка на  шевронной ткани, 7 цветов
-											= ' '
-										+e.item-descr Размер: 120х180мм
-									+e.item-buy
-										+e.BUTTON(type="button").cart-add
-											+e.SPAN.price-current 400&nbsp;
-												+icon('icon-ruble','product__val-icon')
-								+e.item
-									+e.item-pic-wrap.js-product-item-pic
-										+e.A(href='#!').item-pic.decor
-											+e.IMG.item-img(src="img/content/prod-11.jpg")
-											.decor__line
-										+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
-											+icon('icon-loupe','product__zoom-icon')
-									+e.item-info
-										+e.item-title Любая вышивка на  шевронной ткани, 7 цветов
-											= ' '
-										+e.item-descr Размер: 120х180мм
-									+e.item-buy
-										+e.BUTTON(type="button").cart-add
-											+e.SPAN.price-current 400&nbsp;
-												+icon('icon-ruble','product__val-icon')
-
-							+b.pagination._watched
-								+e.UL.list
-									+e.list-item.is-active
-										+e.list-link(href='#!') 1
-									+e.list-item
-										+e.list-link(href='#!') 2
-									+e.list-item
-										+e.list-link(href='#!') 3
-									+e.list-item._dots
-										+e.list-link(href='#!') ...
-									+e.list-item._next
-										+e.list-link(href='#!') Дальше
-									+e.list-item._next
-										+e.list-link(href='#!') Все
-
 					-
 						var catMenu = {
+						title: 'ЖДЁМ ВАШИХ ЗАКАЗОВ!',
 						classMod: '_default'};
 					include components/_category-menu
 
-
 		- var benefitsClass = '_default'
-			include components/_benefits
+		include components/_benefits
