--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -8,10 +8,6 @@
 @import components/all
 @import pages/contacts
 @import pages/delivery
-@import pages/payment
 @import pages/basket
 @import pages/order
-@import pages/news
-@import pages/machine
-@import pages/pictures
-@import pages/clothes
+@import pages/entry-pages
