--- a/src/templates/balloons-page.jade
+++ b/src/templates/balloons-page.jade
@@ -13,53 +13,57 @@ block content
 						= ' '
 						+e.SPAN Главная
 					+e.A.link.is-active(href='#!')
-						+e.SPAN Печать картин, багетное оформление
+						+e.SPAN Воздушные шары с гелием
 
-				+e.bar-title._has-icon
-					+e.SPAN Холсты, модульные картины и багет
-					+icon('icon-pictures', 'page__bar-title-icon')
+				+e.bar-title._has-icon._shirts
+					+e.SPAN Гелиевые шарики с доставкой
+					+icon('icon-balloons_sm', 'page__bar-title-icon')
 
 			+e.in
 				include components/_rubric-side
 				+e.main
-					+b.SECTION.pictures
-						+e.title.title-md Печать фото на холсте, оформление в подрамники и багет, каталог картин художников, акция на изготовление картин!
-						+e.P.descr Печать на холстах как и широкоформатная печать является основным видом нашей деятельности! Мы печатаем водными, пигментными и сольвентными чернилами, на Ваш выбор. Всегда в наличии представлено около двадцати видов материалов для печати, у нас найдется всё широкоформатное, рекламное и большое-красивое. Интерьерная печать на холстах представлена отдельной технологией  с натяжкой на деревянную основу - подрамники.  Кроме самой печати представлены  современные и оригинальные решения в области производства эффектных картин для домашних и офисных интерьеров, читайте о них далее...
-						+e.pics
-							+e.pics-item
-								+e.IMG(src='img/content/pictures-1.jpg')
-								+e.pics-label Фото из &laquo;фотографий&raquo;
-							+e.pics-item
-								+e.IMG(src='img/content/pictures-2.jpg')
-								+e.pics-label Картины художников
-							+e.pics-item
-								+e.IMG(src='img/content/pictures-3.jpg')
-								+e.pics-label._right Оформление в багет
-						+b.benefits-list.pictures__benefits-list
-							+e.title Какие преимущества вы сможете получить заказав печать холстов и подрамников  у нас?
+					+b.SECTION.balloons
+						+e.title.title-md АКЦИЯ НА ВОЗДУШНЫЕ ШАРЫ С ГЕЛИЕМ, ИТАЛЬЯНСКИЕ ШАРИКИ ПО
+							= ' '
+							+e.SPAN 39 РУБ
+							| /ШТУКА!
+						+e.title.title-md НА ВЫБОР ЛЮБЫЕ ЦВЕТА И ТИПЫ ШАРОВ, ЭТО МОГУТ БЫТЬ: КЛАССИЧЕСКИЕ «ПАСТЕЛЬ», «МЕТАЛЛИК», «ПЕРЛАМУТР» ИЛИ НОВИКА ПРОИЗВОДИТЕЛЕЙ - ШАРЫ «КРИСТАЛЛ» И «НЕОН»
+						+e.P.descr Хорошо что вы вышли на эту страничку! Мы вкратце опишем наши предложения, расскажем о типах шаров, современных дизайнерских решениях для подарка и вопросах доставки шаров до двери. Прежде всего хотелось отметить наш богатый ассортимент «воздушной» продукции, многие позиции собраны нами от разрозненных поставщиков, напрямую из регионов, это лучшие заготовки и предложения. Наш метод торговли оптово-складской, принцип ценообразования в точности соответствует этому параметру.  Рассмотрите предлагаемые варианты!
+						+b.benefits-list.balloons__benefits-list
+							+e.title Какие преимущества вы сможете получить заказав воздушные шары у нас?
 							+e.UL
 								+e.LI
-									+e.STRONG - Мы профессионально занимаемся широкоформатной печатью с 2005 года, рабочее оборудование позволяет печатать сольвентными невыгорающими на свету чернилами,
+									+e.STRONG - Действует акция на шары с гелием!
 									= ' '
-									| ваши картины будут долгосрочно используемыми достанутся далёким потомкам, не потеряют внешнего вида! Восьмицветный пигментный плоттер также не оставит равнодушными ценителей настенных интерьерных решений.
+									| Настоящие итальянские шарики наполненные гелием мы предлагаем приобрести по 35 рублей за штуку.  Для тех кто не ознакомился с общегородскими ценами сообщим, что средняя рыночная цена на сегодняшний момент составляет 55-70 рублей за вполне китайские варианты. У нас вы получите «итальянские нарядные» шарики по гораздо меньшей стоимости! Эта стоимость соответствует нашему общефирменному ценообразованию, мы торгуем и производим в гораздо больших объёмах чем остальные конкурирующие организации, благодаря потоку заказов удерживаем минимальную наценку!
 								+e.LI
-									+e.STRONG - Мы одна из немногих печатающих фирм содержащая в своём подразделении багетную мастерскую.
+									+e.STRONG - Стоимость шаров «Металлик», «Перламутр» и «Кристалл»
 									= ' '
-									| Отпечатанные холсты можно не только натянуть на подрамники, но и оформить в красивый багет. На наших стендах размещено более шестисот образцов красивого багета, на самые изящные вкусы, для любых заказчиков. Опыт в обрамлении картин багетом позволяет качественно исполнить любой подрамник, которые популярны и распространены сейчас повсеместно и стали предлагаться не только багетными мастерскими. Для производства картин на подрамниках у нас существуют собственные оригинальные решения!
+									| не отличается от стоимости обычных матовых шаров типа «Пастель». хотя они всегда имели более приорететный спрос и стоимость на рынке услуг по надуванию шаров гелием...
 								+e.LI
-									+e.STRONG - Возможность выбрать картины из каталога на сайте и заказать поиск.
+									+e.STRONG - Возможность выбора шаров с нашего склада, превосходит ассортимет любого уличного ритейлера.
 									= ' '
-									| Просмотрите предложенные варианты интерьерных решений картин на нашем сайте. Поиск любой картинки на заказ, пришлите запрос и мы вышлем вам дополнительные каталоги!
+									| Мы наладили прямые поставки из дружественных стран участников Шанхайской Организации Сотрудничества, собрали коллекцию различных заготовок, привезли самые оригинальные цветные голографические ленты (новинка!) для воздушных шаров, большинство которых вы не встретите в специализированных магазинах и организациях города. Это произошло благодаря давним связям с партнёрами зарубежных стран по части полиграфического взаимодействия.
 								+e.LI
-									+e.STRONG - Мы не экономим на мелочах и вы получите качественную картину на прочной - максимально подходящей деревянной рейке подрамника.
+									+e.STRONG - Шары надуют для вас и подберут цветовые ленты профессиональные дизайнеры,
 									= ' '
-									| На картине сзади будут качественные полноценные подвесы и специальная декоративная проволочка (на выбор возможны и другие варианты крепления).
+									| знатоки своего дела с не менее чем пяти летним опытом работы.
+								+e.LI
+									+e.STRONG - Действует акция на шары с гелием!
+									= ' '
+									| Настоящие итальянские шарики наполненные гелием мы предлагаем приобрести по 35 рублей за штуку.  Для тех кто не ознакомился с общегородскими ценами сообщим, что средняя рыночная цена на сегодняшний момент составляет 55-70 рублей за вполне китайские варианты. У нас вы получите «итальянские нарядные» шарики по гораздо меньшей стоимости! Эта стоимость соответствует нашему общефирменному ценообразованию, мы торгуем и производим в гораздо больших объёмах чем остальные конкурирующие организации, благодаря потоку заказов удерживаем минимальную наценку!
+								+e.LI
+									+e.STRONG - И в заключение) Мы разработали фотокнигу - презентацию: «Каталог воздушных шаров».
+									= ' '
+									| Это единственный печатный каталог заготовок шаров, идей и букетов в Самарской области. Фотокнига является полным каталогом по шарам, идеям для подарков с воздушными шарами и одновременно образцом изготовления фотокниги, для общих любых других тематик. Вы можете посмотреть её, выбрать понравившееся моменты, заприметить что-то на будущее. Каталог дизайнерских букетов воздушных шаров есть и на сайте в разделе «Каталог букетов шаров».
+							+e.P.descr Мы создали полный комплект по продажам и услугам доставки шаров с гелием, проработали самые насущные вопросы технологии и удобства выбора заготовок для клиентов, больше добавить к этой тематике на данный момент пока нечего не остаётся. Будем рады вашим заказам и сотрудничеству!
+
 
 					+b.product
 						+e.sect._has-filter._color
 							+e.sect-title
-								+icon('icon-pictures', 'product__sect-icon')
-								+e.SPAN Печать картин / Образцы наших работ
+								//+icon('icon-shirts', 'product__sect-icon')
+								//+e.SPAN Печать на одежде / Образцы наших работ
 							+e.filter
 								+e.BUTTON.filter-btn(type='button')
 									+icon('icon-filter-down', 'product__filter-icon')
