--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -47,6 +47,8 @@ h1, h2, h3, h4, h5, h6
 	line-height: 1.25
 	color: #00306B
 	text-transform: uppercase
+	&__color
+		color: #E63833
 	
 // basic transition
 =trs
