--- a/src/sass/components/_blocks.sass
+++ b/src/sass/components/_blocks.sass
@@ -439,7 +439,7 @@
 			&_has-icon
 				position: relative
 				padding: 8px 75px 8px 30px
-			&_shirts
+			&_big-icon
 				padding: 8px 85px 8px 30px
 			&-icon
 				position: absolute
@@ -453,6 +453,8 @@
 			.icon-pictures
 				top: 48%
 				font-size: 26px
+			.icon-souvenirs_page
+				font-size: 25px
 			.icon-balloons_sm
 				right: 20px
 				fill: #F3F3F3
@@ -706,3 +708,14 @@
 			text-indent: 30px
 		li:not(:last-child)
 			margin-bottom: 20px
+	&_default
+		margin: 30px 0 0
+			
+/* sect-descr
+	----------------------------------- */
+.sect-descr
+	margin: 20px 0
+	text-indent: 30px
+	
+.sect
+	padding-bottom: 40px
