--- a/src/templates/balloons-page.jade
+++ b/src/templates/balloons-page.jade
@@ -15,21 +15,21 @@ block content
 					+e.A.link.is-active(href='#!')
 						+e.SPAN Воздушные шары с гелием
 
-				+e.bar-title._has-icon._shirts
+				+e.bar-title._has-icon
 					+e.SPAN Гелиевые шарики с доставкой
 					+icon('icon-balloons_sm', 'page__bar-title-icon')
 
 			+e.in
 				include components/_rubric-side
 				+e.main
-					+b.SECTION.balloons
-						+e.title.title-md АКЦИЯ НА ВОЗДУШНЫЕ ШАРЫ С ГЕЛИЕМ, ИТАЛЬЯНСКИЕ ШАРИКИ ПО
+					+b.SECTION.balloons.sect
+						+b.title-md АКЦИЯ НА ВОЗДУШНЫЕ ШАРЫ С ГЕЛИЕМ, ИТАЛЬЯНСКИЕ ШАРИКИ ПО
 							= ' '
-							+e.SPAN 39 РУБ
+							+e.SPAN.color 39 РУБ
 							| /ШТУКА!
-						+e.title.title-md НА ВЫБОР ЛЮБЫЕ ЦВЕТА И ТИПЫ ШАРОВ, ЭТО МОГУТ БЫТЬ: КЛАССИЧЕСКИЕ «ПАСТЕЛЬ», «МЕТАЛЛИК», «ПЕРЛАМУТР» ИЛИ НОВИКА ПРОИЗВОДИТЕЛЕЙ - ШАРЫ «КРИСТАЛЛ» И «НЕОН»
-						+e.P.descr Хорошо что вы вышли на эту страничку! Мы вкратце опишем наши предложения, расскажем о типах шаров, современных дизайнерских решениях для подарка и вопросах доставки шаров до двери. Прежде всего хотелось отметить наш богатый ассортимент «воздушной» продукции, многие позиции собраны нами от разрозненных поставщиков, напрямую из регионов, это лучшие заготовки и предложения. Наш метод торговли оптово-складской, принцип ценообразования в точности соответствует этому параметру.  Рассмотрите предлагаемые варианты!
-						+b.benefits-list.balloons__benefits-list
+						+b.title-md НА ВЫБОР ЛЮБЫЕ ЦВЕТА И ТИПЫ ШАРОВ, ЭТО МОГУТ БЫТЬ: КЛАССИЧЕСКИЕ «ПАСТЕЛЬ», «МЕТАЛЛИК», «ПЕРЛАМУТР» ИЛИ НОВИКА ПРОИЗВОДИТЕЛЕЙ - ШАРЫ «КРИСТАЛЛ» И «НЕОН»
+						+b.P.sect-descr Хорошо что вы вышли на эту страничку! Мы вкратце опишем наши предложения, расскажем о типах шаров, современных дизайнерских решениях для подарка и вопросах доставки шаров до двери. Прежде всего хотелось отметить наш богатый ассортимент «воздушной» продукции, многие позиции собраны нами от разрозненных поставщиков, напрямую из регионов, это лучшие заготовки и предложения. Наш метод торговли оптово-складской, принцип ценообразования в точности соответствует этому параметру.  Рассмотрите предлагаемые варианты!
+						+b.benefits-list._default
 							+e.title Какие преимущества вы сможете получить заказав воздушные шары у нас?
 							+e.UL
 								+e.LI
