--- a/src/templates/pictures-page.jade
+++ b/src/templates/pictures-page.jade
@@ -24,7 +24,7 @@ block content
 				+e.main
 					+b.SECTION.pictures
 						+e.title.title-md Печать фото на холсте, оформление в подрамники и багет, каталог картин художников, акция на изготовление картин!
-						+e.P.descr Печать на холстах как и широкоформатная печать является основным видом нашей деятельности! Мы печатаем водными, пигментными и сольвентными чернилами, на Ваш выбор. Всегда в наличии представлено около двадцати видов материалов для печати, у нас найдется всё широкоформатное, рекламное и большое-красивое. Интерьерная печать на холстах представлена отдельной технологией  с натяжкой на деревянную основу - подрамники.  Кроме самой печати представлены  современные и оригинальные решения в области производства эффектных картин для домашних и офисных интерьеров, читайте о них далее...
+						+b.P.sect-descr Печать на холстах как и широкоформатная печать является основным видом нашей деятельности! Мы печатаем водными, пигментными и сольвентными чернилами, на Ваш выбор. Всегда в наличии представлено около двадцати видов материалов для печати, у нас найдется всё широкоформатное, рекламное и большое-красивое. Интерьерная печать на холстах представлена отдельной технологией  с натяжкой на деревянную основу - подрамники.  Кроме самой печати представлены  современные и оригинальные решения в области производства эффектных картин для домашних и офисных интерьеров, читайте о них далее...
 						+e.pics
 							+e.pics-item
 								+e.IMG(src='img/content/pictures-1.jpg')
@@ -35,7 +35,7 @@ block content
 							+e.pics-item
 								+e.IMG(src='img/content/pictures-3.jpg')
 								+e.pics-label._right Оформление в багет
-						+b.benefits-list.pictures__benefits-list
+						+b.benefits-list._default
 							+e.title Какие преимущества вы сможете получить заказав печать холстов и подрамников  у нас?
 							+e.UL
 								+e.LI
