--- a/src/templates/souvenirs-page.jade
+++ b/src/templates/souvenirs-page.jade
@@ -13,52 +13,49 @@ block content
 						= ' '
 						+e.SPAN Главная
 					+e.A.link.is-active(href='#!')
-						+e.SPAN Печать на одежде
+						+e.SPAN Корпоративные сувениры
 
 				+e.bar-title._has-icon._big-icon
-					+e.SPAN Печать на майках, футболках и одежде
-					+icon('icon-shirts', 'page__bar-title-icon')
+					+e.SPAN Нанесение логотипов, опт.
+					+icon('icon-souvenirs_page', 'page__bar-title-icon')
 
 			+e.in
 				include components/_rubric-side
 				+e.main
-					+b.SECTION.clothes
-						+e.title.title-md ПЕЧАТЬ НА МАЙКАХ И ЛЮБОЙ ОДЕЖДЕ, НАНЕСЕНИЕ ЛОГОТИПОВ. ПРЕДСТАВЛЯЕМ КАТАЛОГ ГОТОВЫХ ДИЗАЙНОВ. ПЕЧАТЬ НА МАЙКАХ ВОЗМОЖНА ЗА 20 МИНУТ, ПРИ ВАС. ДОСТАВКА В РЕГИОНЫ
-						+e.in
-							+e.col
-								+b.P.sect-descr.clothes__sect-descr Мы профессионально занимаемся нанесением изображений на одежды! Развитию этого направления производства мы посвятили не один год.  Печать на одежде возможно несколькими технологическими методами. В зависимости от назначения, мы подберём для вас самые оптимальные варианты. Это может быть термотрансфер, стойкая сублимационная печать или комбинированная технология - «сольвентная печать + контурная резка». Обращайтесь с расчетами заказов и консультацией. Вы получите исчерпывающую информацию.
-								+b.P.sect-descr.clothes__sect-descr Печать на майках популярная услуга, на сайте мы организовали каталог образцов дизайна и наших работ, смотрите, выбирайте, предлагайте свои варианты дизайнов! У нас доступные цены, предлагаем изготовление от единичного экземпляра, до большого корпоративного тиража.
-								+b.P.sect-descr.clothes__sect-descr Ждём ваших заказов!
+					+b.SECTION.souvenirs.sect
+						+b.title-md ИЗГОТОВЛЕНИЕ СУВЕНИРОВ С ВАШИМИ ЛОГОТИПАМИ, ПЕЧАТЬ ФИРМЕННЫХ СУВЕНИРОВ ОПТОМ.
+						+b.P.sect-descr Предлагаем рассмотреть ряд наших предложений и готовых решений по части изготовления сувениров для нужд вашей компании. Для рекламных и иммиджевых целей.  Мы не один год разрабатываем дизайны сувениров с корпоративным уклоном и имеем значительные наработки в этой области, подбираем совпадения цветов с вашим фирменным стилем, не подводим в сроках сдачи заказа. Рассмотрите варианты!
 
-							+b.label-block.clothes__label-block.clothes__col
-								+e.title Печать на одежде
-								+e.in
-									+e.item
-										+e.IMG.item-img(src='img/content/shirts-1.jpg')
-										+e.A.item-label(href='#!') Печать логотипов
-									+e.item
-										+e.IMG.item-img(src='img/content/shirts-2.jpg')
-										+e.A.item-label(href='#!') Любая одежда
-									+e.item
-										+e.IMG.item-img(src='img/content/shirts-3.jpg')
-										+e.A.item-label(href='#!') Футболки с дизайном!
-									+e.item
-										+e.item._half
-											+e.IMG.item-img(src='img/content/shirts-4.jpg')
-											+e.A.item-label._top(href='#!') Корпоративные
-										+e.item._double
-												+e.IMG.item-img(src='img/content/shirts-5.jpg')
-										+e.item._double
-											+e.IMG.item-img(src='img/content/shirts-6.jpg')
-											+e.A.item-label(href='#!') Спортивные
-								+e.logo
-									+e.IMG.logo-img(src='img/logo-label.svg')
+						+b.benefits-list._default
+							+e.title Что мы можем изготовить для Вас и какие услуги самые популярные?
+							+e.UL
+								+e.LI
+									+e.STRONG - Печать на спецодежде для нужд компаний.
+									= ' '
+									| У нас вы сможете нанести логотипы на любую одежу.  Гибкие цены, выбор из нескольких видов технологий нанесения...
+								+e.LI
+									+e.STRONG - Вышивка для одежды и фирменных подарков.
+									= ' '
+									| В корпоративной вышивке можно использовать множество предметов - от салфеток с надписями, до полотенец и банных халатов. Вышивкой можно дополнить и напечатанный логотип или рисунок на одежде.
+								+e.LI
+									+e.STRONG - Популярна услуга нанесения логотипов на посуду - кружки, тарелки, бокалы.
+									= ' '
+									| Подарочные «элементы стола» стали неизменной атрибутикой преуспевающих организаций. Это хорошо зарекомендовавшие себя - надёжные, «классические» сувениры. При вручении подобного подарка всегда прослеживается положительный эмоциональный отклик с принимающей стороны.
+								+e.LI
+									+e.STRONG - Печать полиграфической продукции, широкоформатная печать.
+									= ' '
+									| Отпечатаем полиграфические материалы, от визитки до широкого холста. Есть услуги натяжки картин и обрамления багетом, рассмотрите варианты оформления вашего офиса. Это стильно, модно, популярно, а теперь ещё и стоит недорого!
+								+e.LI
+									+e.STRONG - Упаковка отпечатанной продукции.
+									= ' '
+									| Для некоторых предметов нами разработаны специальные упаковочные решения, недорогие и презентабельные, подходящие для оптового заказа.
+							+e.P.descr Мы готовы к сотрудничеству и реализации поставленных вами задач, ждём ваших заказов!
 
 					+b.product
 						+e.sect._has-filter._color
 							+e.sect-title
-								+icon('icon-shirts', 'product__sect-icon')
-								+e.SPAN Печать на одежде / Образцы наших работ
+								//+icon('icon-shirts', 'product__sect-icon')
+								//+e.SPAN Печать на одежде / Образцы наших работ
 							+e.filter
 								+e.BUTTON.filter-btn(type='button')
 									+icon('icon-filter-down', 'product__filter-icon')
