--- a/src/templates/photos-page.jade
+++ b/src/templates/photos-page.jade
@@ -12,139 +12,49 @@ block content
 						+icon('icon-house', 'breadcrumbs__icon')
 						= ' '
 						+e.SPAN Главная
-					+e.A.link(href='#!')
-						+e.SPAN Машинная вышивка
 					+e.A.link.is-active(href='#!')
-						+e.SPAN Вышивка имени на полотенце
+						+e.SPAN Печать фотокниг и альбомов
 
-				+e.bar-title
-					+e.SPAN Артикул: 22
+				+e.bar-title._has-icon
+					+e.SPAN Фотоальбомы. Печать, изготовление фотокниг
+					+icon('icon-books_page', 'page__bar-title-icon')
 
 			+e.in
 				include components/_rubric-side
 				+e.main
+					+b.SECTION.photos.sect
+						+b.title-md.photos__title ПРЕДСТАВЛЯЕМ ВАМ САМЫЕ ОРИГИНАЛЬНЫЕ ТЕХНОЛОГИЧЕСКИЕ НОВИНКИ И НОВОВВЕДЕНИЯ ПРОИЗВОДСТВА ФОТОКНИГ. МЫ ИСПОЛЬЗУЕМ 3D ОБЛОЖКИ С ГОЛОГРАФИЕЙ, ЗЕРКАЛЬНЫЕ ОБЛОЖКИ, КОЖАНЫЕ МАТЕРИАЛЫ.
+						+b.P.sect-descr Выбор материалов для изготовления фотокниг у нас действительно хорош! По вашему желанию мы можем предложить несколько типов и видов внутренних страниц (пластик, картон различной толщины и цветов).  У нас есть своя, неповторимая технология изготовления обложек и самих фотокниг, альбомы будут выглядеть аккуратно и оригинально. В наших моделях все продумано, от размеров отступов, до реализации дизайнерских разворотов из специального картона.
+						+b.benefits-list._default
+							+e.title Какие возможности и выгоды вы получаете заказав фотокниги у нас?
+							+e.UL
+								+e.LI
+									+e.STRONG - Макетирование фотокниги произведут профессиональные полиграфические дизайнеры,
+									= ' '
+									| с опытом работы от 5 лет.
+								+e.LI
+									+e.STRONG - У вас будет новейшая по технологии фотокнига,
+									= ' '
+									| разработки 2017 года, книги похожей которой нет сейчас ни у ваших знакомых, ни скорее всего у знакомых-знакомых.  Для этого используются современные голографические обложки, нецарапающиеся в ходе эксплуатации спец. покрытия от зарубежных поставщиков, невыгорающие чернила и многие другие приятные мелочи, незначительные на первый взгляд, но придающие очарование конечному продукту в итоговой сборке...
+								+e.LI
+									+e.STRONG - Возможность выбрать обложку заводского изготовления.
+									= ' '
+									| У нас налажены прямые поставки от производителей фотообложек с мировым именем. Новинки вы можете рассмотреть в каталоге. Это обложки из пластиков, варианты с никрустацией, со стразами, «под кожу», специальные свадебные варианты альбомов, на любой вкус! Девяносто процентов этих товаров не представлено другими конкурирующими организациями в сфере фотопечати и изготовления фотокниг...
+								+e.LI
+									+e.STRONG - Оригинальные выклейки форзацев из дизайнерского картона.
+									= ' '
+									| Так как мы изначально занимались полиграфическими услугами, переплётными работами, то постарались привнести технические наработки и в область производства фотокниг. Обратите внимание на возможность дизайнерских форзацев из специальных картонов. Это мягкие, матовые, глянцевые и ячеистые варианты. Есть зеркально-волокнистый вариант форзацев, тоже наше оригинальная находка редкого материала. Собрать коллекцию было не просто, но надеюсь что вы оцените итоговый результат работы.
+								+e.LI
+									+e.STRONG - При всех отличиях и вышеуказанных преимуществах технологий,  стоимость наших фотокниг не дороже,
+									= ' '
+									| а во многом и значительно дешевле стандартных предложений на рынке подобного рода услуг!
+							+e.P.descr Ждём ваших заказов!
+
 					+b.product
-						+e.FORM(action='#!')
-							+e.card
-								+e.card-col
-									+e.look
-										+e.look-view.js-look-view
-											+e.look-pic
-												+e.IMG(src='img/content/look-img-1.jpg')
-											+e.look-pic
-												+e.IMG(src='img/content/look-img-2.jpg')
-											+e.look-pic
-												+e.IMG(src='img/content/look-img-1.jpg')
-											+e.look-pic
-												+e.IMG(src='img/content/look-img-2.jpg')
-											+e.look-pic
-												+e.IMG(src='img/content/look-img-1.jpg')
-										+e.look-thumbs.js-look-thumbs
-											+e.item-pic._thumb.decor._xs
-												+e.IMG(src='img/content/look-1.jpg')
-												.decor__line
-											+e.item-pic._thumb.decor._xs
-												+e.IMG(src='img/content/look-2.jpg')
-												.decor__line
-											+e.item-pic._thumb.decor._xs
-												+e.IMG(src='img/content/look-3.jpg')
-												.decor__line
-											+e.item-pic._thumb.decor._xs
-												+e.IMG(src='img/content/look-4.jpg')
-												.decor__line
-											+e.item-pic._thumb.decor._xs
-												+e.IMG(src='img/content/look-5.jpg')
-												.decor__line
-									+e.props
-										+e.props-col
-											+e.props-row
-												+e.BUTTON(type='button').wish-add-btn
-												+e.BUTTON(type='button').calc-btn
-													+icon('icon-arr-def', 'product__calc-icon')
-													+e.SPAN Рассчитать свой - заказной дизайн
-											+e.props-row
-												+b.rating._product-card
-													+e.text Оцените данный товар:
-													+e.in.js-rating
-														+e.INPUT.input(id='product-rating-6' value='6' type='radio' name='product-rating')
-														+e.LABEL.icon(for='product-rating-6')
-															+icon('icon-star', 'rating__star')
-														+e.INPUT.input(id='product-rating-5' value='5' type='radio' name='product-rating')
-														+e.LABEL.icon(for='product-rating-5')
-															+icon('icon-star', 'rating__star')
-														+e.INPUT.input(id='product-rating-4' value='4' type='radio' name='product-rating')
-														+e.LABEL.icon(for='product-rating-4')
-															+icon('icon-star', 'rating__star')
-														+e.INPUT.input(id='product-rating-3' value='3' type='radio' name='product-rating')
-														+e.LABEL.icon(for='product-rating-3')
-															+icon('icon-star', 'rating__star')
-														+e.INPUT.input(id='product-rating-2' value='2' type='radio' name='product-rating')
-														+e.LABEL.icon(for='product-rating-2')
-															+icon('icon-star', 'rating__star')
-														+e.INPUT.input(id='product-rating-1' value='1' type='radio' name='product-rating')
-														+e.LABEL.icon(for='product-rating-1')
-															+icon('icon-star', 'rating__star')
-
-												- var socialsClass = '_product-card'
-												include components/_socials
-
-										+e.props-col
-											+e.hashtags
-												+e.A.hashtags-link(href='#!') #полотенце в подарок
-												+e.A.hashtags-link(href='#!') #вышивки на полотенце
-												+e.A.hashtags-link(href='#!') #сувениры с вышивкой
-
-								+e.card-col.product__descr
-									+e.descr-title ВЫШИВКА ИМЕНИ НА ПОЛОТЕНЦЕ,
-										br
-										| БУДЕТ НУЖНОЕ ВАМ ИМЯ И ШРИФТЫ
-									+e.descr-item
-										+e.P
-											+e.STRONG Подарочные полотенца
-											=	' '
-											| - это наша новинка! Приятный, душевный сувенир. Вам стоит обозначить лишь имя будущего владельца. Шрифты подберём какие нужно, макет на утверждение отправим по почте или куда скажете.
-									+e.descr-item
-										+e.P
-											+e.STRONG Дизайн:
-											=  ' '
-											| дизайн  шрифтов предлагается из наработанных нами  ранее, если необходимо что-то эксклюзивное, то можно будет и разработать, за дополнительную оплату.
-									+e.descr-item
-										+e.P
-											+e.STRONG Размер надписи:
-											=  ' '
-											| 200 мм или около того (с мужскую ладонь).
-										+e.P
-											+e.STRONG Макет:
-											=  ' '
-											| макет вышлем вам на утверждение по электронной  почте.
-										+e.P
-											+e.STRONG Срок исполнения:
-											=  ' '
-											| от 30 минут.
-									+e.descr-item
-										+e.P
-											+e.STRONG Стоимость:
-											=  ' '
-											| не учитывает саму заготовку полотенца.  Вы приносите своё или добавляете в корзину дополнительно «чистое» полотенце.
-
-									+e.buy
-										+e.buy-in
-											+e.amount
-												+e.amount-text Количество:
-												+e.amount-count
-													+e.INPUT.amount-input.js-product-amount(type='number' min='1' max='999' value='1' name='')
-											+e.price
-												+e.SPAN 350
-												+icon('icon-ruble')
-										+e.A.link-sale(href='#!').link-sale
-											+e.SPAN Цены на опт.
-									+e.BUTTON.btn-cart.btn-cart(type='submit') ДОБАВИТЬ В КОРЗИНУ
-
-
-						+e.sect._has-filter
+						+e.sect._has-filter._color
 							+e.sect-title
-								+icon('icon-lovers', 'product__sect-icon')
-								+e.SPAN Похожие и сопутствующие товары.
+								+icon('icon-cups', 'product__sect-icon')
+								+e.SPAN Печать на кружках и посуде / Образцы наших работ
 							+e.filter
 								+e.BUTTON.filter-btn(type='button')
 									+icon('icon-filter-down', 'product__filter-icon')
@@ -407,118 +317,11 @@ block content
 								+e.list-item._next
 									+e.list-link(href='#!') Следующая
 
-						+e.watched
-							+e.sect._watched
-								+e.sect-title
-									+icon('icon-watched', 'product__sect-icon')
-									+e.SPAN Просмотренные ранее и рекомендуемые:
-								+e.sect-links._watched
-									+e.sect-link
-										+e.A(href="#!") ВЫШИВКА НА ХАЛАТАХ
-											+e.SPAN.sect-count 9
-									+e.sect-link
-										+e.A(href="#!") ПЕЧАТЬ НА ХОЛСТЕ
-											+e.SPAN.sect-count 16
-									+e.sect-link
-										+e.A(href="#!") КОРПОРАТИВНЫЕ СУВЕНИРЫ
-											+e.SPAN.sect-count 11
-							+e.examples._watched
-								+e.item
-									+e.item-pic-wrap.js-product-item-pic
-										+e.A(href='#!').item-pic.decor
-											+e.IMG.item-img(src="img/content/prod-11.jpg")
-											.decor__line
-										+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
-											+icon('icon-loupe','product__zoom-icon')
-									+e.item-info
-										+e.item-title Любая вышивка на  шевронной ткани, 7 цветов
-											= ' '
-										+e.item-descr Размер: 120х180мм
-									+e.item-buy
-										+e.BUTTON(type="button").cart-add
-											+e.SPAN.price-current 400&nbsp;
-												+icon('icon-ruble','product__val-icon')
-								+e.item
-									+e.item-pic-wrap.js-product-item-pic
-										+e.A(href='#!').item-pic.decor
-											+e.IMG.item-img(src="img/content/prod-12.jpg")
-											.decor__line
-										+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
-											+icon('icon-loupe','product__zoom-icon')
-									+e.item-info
-										+e.item-title Любая вышивка на  полотенце, под  «Золото».
-										+e.item-descr Размер: 250х100 мм
-									+e.item-buy
-										+e.BUTTON(type="button").cart-add
-											+e.SPAN.price-current 400&nbsp;
-												+icon('icon-ruble','product__val-icon')
-								+e.item
-									+e.item-pic-wrap.js-product-item-pic
-										+e.A(href='#!').item-pic.decor
-											+e.IMG.item-img(src="img/content/prod-10.jpg")
-											.decor__line
-										+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
-											+icon('icon-loupe','product__zoom-icon')
-									+e.item-info
-										+e.item-title Полотенце -зайчик!
-											= ' '
-										+e.item-descr Услуга - сворачивание полотенец в виде  зайчиков, для подарка.
-									+e.item-buy
-										+e.BUTTON(type="button").cart-add
-											+e.SPAN.price-current 150&nbsp;
-												+icon('icon-ruble','product__val-icon')
-								+e.item
-									+e.item-pic-wrap.js-product-item-pic
-										+e.A(href='#!').item-pic.decor
-											+e.IMG.item-img(src="img/content/prod-11.jpg")
-											.decor__line
-										+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
-											+icon('icon-loupe','product__zoom-icon')
-									+e.item-info
-										+e.item-title Любая вышивка на  шевронной ткани, 7 цветов
-											= ' '
-										+e.item-descr Размер: 120х180мм
-									+e.item-buy
-										+e.BUTTON(type="button").cart-add
-											+e.SPAN.price-current 400&nbsp;
-												+icon('icon-ruble','product__val-icon')
-								+e.item
-									+e.item-pic-wrap.js-product-item-pic
-										+e.A(href='#!').item-pic.decor
-											+e.IMG.item-img(src="img/content/prod-11.jpg")
-											.decor__line
-										+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
-											+icon('icon-loupe','product__zoom-icon')
-									+e.item-info
-										+e.item-title Любая вышивка на  шевронной ткани, 7 цветов
-											= ' '
-										+e.item-descr Размер: 120х180мм
-									+e.item-buy
-										+e.BUTTON(type="button").cart-add
-											+e.SPAN.price-current 400&nbsp;
-												+icon('icon-ruble','product__val-icon')
-
-							+b.pagination._watched
-								+e.UL.list
-									+e.list-item.is-active
-										+e.list-link(href='#!') 1
-									+e.list-item
-										+e.list-link(href='#!') 2
-									+e.list-item
-										+e.list-link(href='#!') 3
-									+e.list-item._dots
-										+e.list-link(href='#!') ...
-									+e.list-item._next
-										+e.list-link(href='#!') Дальше
-									+e.list-item._next
-										+e.list-link(href='#!') Все
-
 					-
 						var catMenu = {
+						title: 'ЖДЁМ ВАШИХ ЗАКАЗОВ!',
 						classMod: '_default'};
 					include components/_category-menu
 
-
 		- var benefitsClass = '_default'
-			include components/_benefits
-			
+		include components/_benefits
