--- a/src/templates/presents-page.jade
+++ b/src/templates/presents-page.jade
@@ -13,138 +13,58 @@ block content
 						= ' '
 						+e.SPAN Главная
 					+e.A.link(href='#!')
-						+e.SPAN Машинная вышивка
+						+e.SPAN Услуги фирмы
 					+e.A.link.is-active(href='#!')
-						+e.SPAN Вышивка имени на полотенце
+						+e.SPAN Изготовление подарков
 
-				+e.bar-title
-					+e.SPAN Артикул: 22
+				+e.bar-title._has-icon
+					+e.SPAN Выбор вариантов подарков
+					+icon('icon-presents', 'page__bar-title-icon')
 
 			+e.in
 				include components/_rubric-side
 				+e.main
+					+b.SECTION.sect
+						+b.title-md ВЫ ЗАДУМЫВАЕТЕСЬ ЧТО ПОДАРИТЬ? ИЗГОТОВЛЕНИЕ ПОДАРКОВ ДЛЯ БЛИЗКИХ И КОРПОРАТИВНЫЕ
+						+b.P.sect-descr Если вы рассматриваете варианты подарков для близких, сотрудникам организации или клиентам, то у нас есть хорошие предложения для вас и новые идеи! Мы разработали этот раздел для удобства выбора подарков, собрали наиболее интересные идеи и разместили их здесь, в карточках товара.
+						+b.benefits-list._default
+							+e.title Какие возможности есть у нас для изготовления подарков и самые популярные направления?
+							+e.UL
+								+e.LI
+									+e.STRONG - Печать на кружках, бокалах и другой посуде.
+									= ' '
+									| У нас большое количество готовых эскизов дизайна и заготовок, принимаем любой ваш макет к печати с возможностиями доработки. Корректируем по цветам, делаем бесплатное 3Д предпросмотр макетов.
+								+e.LI
+									+e.STRONG - Вышивка для личных вещей и фирменных подарков.
+									= ' '
+									| На сегодняшний день это довольно редкая, но интересная услуга! Есть варианты новинок дизайна и совершенно «незаезженных» подарков.  Вышивка оказывается зачастую именно тем, что ещё не дарили, чем не успели удивить раньше и что может быть полезным в повседневной жизни!
+								+e.LI
+									+e.STRONG - Печать на холсте и натяжка на подрамники ваших фотографий.
+									= ' '
+									| Можно сделать обрамление фотографий в багет, изготовить картины для интерьера из каталога. У нас вы получите высокое, проверенное качество, полное совпадение по цветам и незначительным оттенкам любых фотографий. Есть услуга модной «мозаичной фотографии». Также предлагаем печать модульных картинных блоков, плакатов, панно.
+								+e.LI
+									+e.STRONG - Подарком может быть печать на любой одежде. В наличии майки, футболки и бейсболки всех цветов.
+									= ' '
+									| Идей вариантов может быть великое множество, начиная от простой фотографии с совместного отдыха, до разработки красивого коллажа или заготовленного оригинального рисунка.
+								+e.LI
+									+e.STRONG - Подарки в виде значков, брелков для ключей, фотомагнитов, открывашек, номерков ГосНомер.
+									= ' '
+									| Для самого редкого подарка-сувенира - найдутся редкие виды заготовок и идей. Это карманные зеркальца, ключники с зеркалами, брелки любовные, значки на магнитах, рассмотрите варианты.
+								+e.LI
+									+e.STRONG - Фотокнига-подарок.
+									= ' '
+									| Интересные варианты сборки фотокниг, предлагаем собственные наработки и неповторимую «манеру» изготовления. Наши фотокниги отличаются технологичностью и новизной технических решений в этой области. Начиная с голографической обложки и заканчивая дизайнерскими картонами при выклейке форзацев.
+								+e.LI
+									+e.STRONG - Идеи и подарки из воздушных шаров с гелием.
+									= ' '
+									| Услуга только для г. Самара. Выбор вариантов подарка связанного с воздушными гелиевыми шариками, креативные решения.
+							+e.P.descr Мы готовы к сотрудничеству и реализации поставленных вами задач, ждём ваших заказов!
+
 					+b.product
-						+e.FORM(action='#!')
-							+e.card
-								+e.card-col
-									+e.look
-										+e.look-view.js-look-view
-											+e.look-pic
-												+e.IMG(src='img/content/look-img-1.jpg')
-											+e.look-pic
-												+e.IMG(src='img/content/look-img-2.jpg')
-											+e.look-pic
-												+e.IMG(src='img/content/look-img-1.jpg')
-											+e.look-pic
-												+e.IMG(src='img/content/look-img-2.jpg')
-											+e.look-pic
-												+e.IMG(src='img/content/look-img-1.jpg')
-										+e.look-thumbs.js-look-thumbs
-											+e.item-pic._thumb.decor._xs
-												+e.IMG(src='img/content/look-1.jpg')
-												.decor__line
-											+e.item-pic._thumb.decor._xs
-												+e.IMG(src='img/content/look-2.jpg')
-												.decor__line
-											+e.item-pic._thumb.decor._xs
-												+e.IMG(src='img/content/look-3.jpg')
-												.decor__line
-											+e.item-pic._thumb.decor._xs
-												+e.IMG(src='img/content/look-4.jpg')
-												.decor__line
-											+e.item-pic._thumb.decor._xs
-												+e.IMG(src='img/content/look-5.jpg')
-												.decor__line
-									+e.props
-										+e.props-col
-											+e.props-row
-												+e.BUTTON(type='button').wish-add-btn
-												+e.BUTTON(type='button').calc-btn
-													+icon('icon-arr-def', 'product__calc-icon')
-													+e.SPAN Рассчитать свой - заказной дизайн
-											+e.props-row
-												+b.rating._product-card
-													+e.text Оцените данный товар:
-													+e.in.js-rating
-														+e.INPUT.input(id='product-rating-6' value='6' type='radio' name='product-rating')
-														+e.LABEL.icon(for='product-rating-6')
-															+icon('icon-star', 'rating__star')
-														+e.INPUT.input(id='product-rating-5' value='5' type='radio' name='product-rating')
-														+e.LABEL.icon(for='product-rating-5')
-															+icon('icon-star', 'rating__star')
-														+e.INPUT.input(id='product-rating-4' value='4' type='radio' name='product-rating')
-														+e.LABEL.icon(for='product-rating-4')
-															+icon('icon-star', 'rating__star')
-														+e.INPUT.input(id='product-rating-3' value='3' type='radio' name='product-rating')
-														+e.LABEL.icon(for='product-rating-3')
-															+icon('icon-star', 'rating__star')
-														+e.INPUT.input(id='product-rating-2' value='2' type='radio' name='product-rating')
-														+e.LABEL.icon(for='product-rating-2')
-															+icon('icon-star', 'rating__star')
-														+e.INPUT.input(id='product-rating-1' value='1' type='radio' name='product-rating')
-														+e.LABEL.icon(for='product-rating-1')
-															+icon('icon-star', 'rating__star')
-
-												- var socialsClass = '_product-card'
-												include components/_socials
-
-										+e.props-col
-											+e.hashtags
-												+e.A.hashtags-link(href='#!') #полотенце в подарок
-												+e.A.hashtags-link(href='#!') #вышивки на полотенце
-												+e.A.hashtags-link(href='#!') #сувениры с вышивкой
-
-								+e.card-col.product__descr
-									+e.descr-title ВЫШИВКА ИМЕНИ НА ПОЛОТЕНЦЕ,
-										br
-										| БУДЕТ НУЖНОЕ ВАМ ИМЯ И ШРИФТЫ
-									+e.descr-item
-										+e.P
-											+e.STRONG Подарочные полотенца
-											=	' '
-											| - это наша новинка! Приятный, душевный сувенир. Вам стоит обозначить лишь имя будущего владельца. Шрифты подберём какие нужно, макет на утверждение отправим по почте или куда скажете.
-									+e.descr-item
-										+e.P
-											+e.STRONG Дизайн:
-											=  ' '
-											| дизайн  шрифтов предлагается из наработанных нами  ранее, если необходимо что-то эксклюзивное, то можно будет и разработать, за дополнительную оплату.
-									+e.descr-item
-										+e.P
-											+e.STRONG Размер надписи:
-											=  ' '
-											| 200 мм или около того (с мужскую ладонь).
-										+e.P
-											+e.STRONG Макет:
-											=  ' '
-											| макет вышлем вам на утверждение по электронной  почте.
-										+e.P
-											+e.STRONG Срок исполнения:
-											=  ' '
-											| от 30 минут.
-									+e.descr-item
-										+e.P
-											+e.STRONG Стоимость:
-											=  ' '
-											| не учитывает саму заготовку полотенца.  Вы приносите своё или добавляете в корзину дополнительно «чистое» полотенце.
-
-									+e.buy
-										+e.buy-in
-											+e.amount
-												+e.amount-text Количество:
-												+e.amount-count
-													+e.INPUT.amount-input.js-product-amount(type='number' min='1' max='999' value='1' name='')
-											+e.price
-												+e.SPAN 350
-												+icon('icon-ruble')
-										+e.A.link-sale(href='#!').link-sale
-											+e.SPAN Цены на опт.
-									+e.BUTTON.btn-cart.btn-cart(type='submit') ДОБАВИТЬ В КОРЗИНУ
-
-
-						+e.sect._has-filter
+						+e.sect._has-filter._color
 							+e.sect-title
-								+icon('icon-lovers', 'product__sect-icon')
-								+e.SPAN Похожие и сопутствующие товары.
+								//+icon('icon-cups', 'product__sect-icon')
+								//+e.SPAN Печать на кружках и посуде / Образцы наших работ
 							+e.filter
 								+e.BUTTON.filter-btn(type='button')
 									+icon('icon-filter-down', 'product__filter-icon')
@@ -165,7 +85,7 @@ block content
 								+e.BUTTON.filter-btn(type='button')
 									+icon('icon-filter-squares', 'product__filter-icon')
 									= ' '
-									+e.SPAN 60
+									+e.SPAN 60h
 								+e.BUTTON.filter-btn(type='button')
 									+icon('icon-filter-list', 'product__filter-icon')
 
@@ -407,118 +327,11 @@ block content
 								+e.list-item._next
 									+e.list-link(href='#!') Следующая
 
-						+e.watched
-							+e.sect._watched
-								+e.sect-title
-									+icon('icon-watched', 'product__sect-icon')
-									+e.SPAN Просмотренные ранее и рекомендуемые:
-								+e.sect-links._watched
-									+e.sect-link
-										+e.A(href="#!") ВЫШИВКА НА ХАЛАТАХ
-											+e.SPAN.sect-count 9
-									+e.sect-link
-										+e.A(href="#!") ПЕЧАТЬ НА ХОЛСТЕ
-											+e.SPAN.sect-count 16
-									+e.sect-link
-										+e.A(href="#!") КОРПОРАТИВНЫЕ СУВЕНИРЫ
-											+e.SPAN.sect-count 11
-							+e.examples._watched
-								+e.item
-									+e.item-pic-wrap.js-product-item-pic
-										+e.A(href='#!').item-pic.decor
-											+e.IMG.item-img(src="img/content/prod-11.jpg")
-											.decor__line
-										+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
-											+icon('icon-loupe','product__zoom-icon')
-									+e.item-info
-										+e.item-title Любая вышивка на  шевронной ткани, 7 цветов
-											= ' '
-										+e.item-descr Размер: 120х180мм
-									+e.item-buy
-										+e.BUTTON(type="button").cart-add
-											+e.SPAN.price-current 400&nbsp;
-												+icon('icon-ruble','product__val-icon')
-								+e.item
-									+e.item-pic-wrap.js-product-item-pic
-										+e.A(href='#!').item-pic.decor
-											+e.IMG.item-img(src="img/content/prod-12.jpg")
-											.decor__line
-										+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
-											+icon('icon-loupe','product__zoom-icon')
-									+e.item-info
-										+e.item-title Любая вышивка на  полотенце, под  «Золото».
-										+e.item-descr Размер: 250х100 мм
-									+e.item-buy
-										+e.BUTTON(type="button").cart-add
-											+e.SPAN.price-current 400&nbsp;
-												+icon('icon-ruble','product__val-icon')
-								+e.item
-									+e.item-pic-wrap.js-product-item-pic
-										+e.A(href='#!').item-pic.decor
-											+e.IMG.item-img(src="img/content/prod-10.jpg")
-											.decor__line
-										+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
-											+icon('icon-loupe','product__zoom-icon')
-									+e.item-info
-										+e.item-title Полотенце -зайчик!
-											= ' '
-										+e.item-descr Услуга - сворачивание полотенец в виде  зайчиков, для подарка.
-									+e.item-buy
-										+e.BUTTON(type="button").cart-add
-											+e.SPAN.price-current 150&nbsp;
-												+icon('icon-ruble','product__val-icon')
-								+e.item
-									+e.item-pic-wrap.js-product-item-pic
-										+e.A(href='#!').item-pic.decor
-											+e.IMG.item-img(src="img/content/prod-11.jpg")
-											.decor__line
-										+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
-											+icon('icon-loupe','product__zoom-icon')
-									+e.item-info
-										+e.item-title Любая вышивка на  шевронной ткани, 7 цветов
-											= ' '
-										+e.item-descr Размер: 120х180мм
-									+e.item-buy
-										+e.BUTTON(type="button").cart-add
-											+e.SPAN.price-current 400&nbsp;
-												+icon('icon-ruble','product__val-icon')
-								+e.item
-									+e.item-pic-wrap.js-product-item-pic
-										+e.A(href='#!').item-pic.decor
-											+e.IMG.item-img(src="img/content/prod-11.jpg")
-											.decor__line
-										+e.A.zoom(href='img/content/prod-3_lg.jpg' data-fancybox='product-1')
-											+icon('icon-loupe','product__zoom-icon')
-									+e.item-info
-										+e.item-title Любая вышивка на  шевронной ткани, 7 цветов
-											= ' '
-										+e.item-descr Размер: 120х180мм
-									+e.item-buy
-										+e.BUTTON(type="button").cart-add
-											+e.SPAN.price-current 400&nbsp;
-												+icon('icon-ruble','product__val-icon')
-
-							+b.pagination._watched
-								+e.UL.list
-									+e.list-item.is-active
-										+e.list-link(href='#!') 1
-									+e.list-item
-										+e.list-link(href='#!') 2
-									+e.list-item
-										+e.list-link(href='#!') 3
-									+e.list-item._dots
-										+e.list-link(href='#!') ...
-									+e.list-item._next
-										+e.list-link(href='#!') Дальше
-									+e.list-item._next
-										+e.list-link(href='#!') Все
-
 					-
 						var catMenu = {
+						title: 'ЖДЁМ ВАШИХ ЗАКАЗОВ!',
 						classMod: '_default'};
 					include components/_category-menu
 
-
 		- var benefitsClass = '_default'
-			include components/_benefits
-			
+		include components/_benefits
