--- a/src/templates/Pechat-na-kruzhkah-naneseniye-na-kruzhkhi-i_posudu.jade
+++ b/src/templates/Pechat-na-kruzhkah-naneseniye-na-kruzhkhi-i_posudu.jade
@@ -29,7 +29,7 @@ block content
 						+b.product-types._cups
 							+e.row
 								+e.FIGURE.item._border-blue
-									+e.item-img.IMG(src='img/content/cups-1.jpg')
+									+e.item-img.IMG(src='img/content/cups-types-1.jpg')
 									+e.SPAN.item-label._1 Кружки "Цветные"
 									+e.SPAN.item-label._2 "Пивные"
 									+e.A(href='#!').item-in
@@ -38,7 +38,7 @@ block content
 												+e.SPAN ВОЗМОЖНЫЕ ЗАГОТОВКИ
 											+e.item-descr Всегда в наличии более сорока видов заготовок кружек, бокалов, тарелочек.
 								+e.FIGURE.item._border-red
-									+e.item-img.IMG(src='img/content/cups-2.jpg')
+									+e.item-img.IMG(src='img/content/cups-types-2.jpg')
 									+e.SPAN.item-label._3 Просмотрите предварительное 3Д вашей кружки!
 									+e.A(href='#!').item-in
 										+e.FIGCAPTION.item-text
@@ -48,7 +48,7 @@ block content
 												+e.BR
 												| на кружки
 								+e.FIGURE.item._border-yellow
-									+e.item-img.IMG(src='img/content/cups-3.jpg')
+									+e.item-img.IMG(src='img/content/cups-types-3.jpg')
 									+e.A(href='#!').item-in
 										+e.FIGCAPTION.item-text
 											+e.H4.item-title
@@ -57,7 +57,7 @@ block content
 												+e.BR
 												| наши наработки, фирменный дизайн. Коллекция постоянно пополняется!
 								+e.FIGURE.item._border-green
-									+e.item-img.IMG(src='img/content/cups-4.jpg')
+									+e.item-img.IMG(src='img/content/cups-types-4.jpg')
 									+e.A(href='#!').item-in
 										+e.FIGCAPTION.item-text
 											+e.H4.item-title
