--- a/src/templates/pechat-na-kruzhkah-naneseniye-na-kruzhkhi-i_posudu.jade
+++ b/src/templates/pechat-na-kruzhkah-naneseniye-na-kruzhkhi-i_posudu.jade
@@ -563,7 +563,7 @@ block content
 									+e.item
 										+e.item-img.IMG(src='img/content/overview-1.jpg')
 										+e.A.zoom(href='img/content/package-5_lg.jpg' data-fancybox='present-pack')
-											+icon('icon-loupe','present-pack__zoom-icon')
+											+icon('icon-loupe','overview__zoom-icon')
 										+e.item-label Большой выбор
 											+e.BR
 											| нарядных лент
@@ -571,25 +571,25 @@ block content
 									+e.item
 										+e.item-img.IMG(src='img/content/overview-2.jpg')
 										+e.A.zoom(href='img/content/package-3_lg.jpg' data-fancybox='present-pack')
-											+icon('icon-loupe','present-pack__zoom-icon')
+											+icon('icon-loupe','overview__zoom-icon')
 								+e.col
 									+e.item
 										+e.item-img.IMG(src='img/content/overview-3.jpg')
 										+e.A.zoom(href='img/content/package-5_lg.jpg' data-fancybox='present-pack')
-											+icon('icon-loupe','present-pack__zoom-icon')
+											+icon('icon-loupe','overview__zoom-icon')
 									+e.item
 										+e.item-img.IMG(src='img/content/overview-4.jpg')
 										+e.A.zoom(href='img/content/package-5_lg.jpg' data-fancybox='present-pack')
-											+icon('icon-loupe','present-pack__zoom-icon')
+											+icon('icon-loupe','overview__zoom-icon')
 								+e.col
 									+e.item
 										+e.item-img.IMG(src='img/content/overview-5.jpg')
 										+e.A.zoom(href='img/content/package-5_lg.jpg' data-fancybox='present-pack')
-											+icon('icon-loupe','present-pack__zoom-icon')
+											+icon('icon-loupe','overview__zoom-icon')
 									+e.item
 										+e.item-img.IMG(src='img/content/overview-6.jpg')
 										+e.A.zoom(href='img/content/package-5_lg.jpg' data-fancybox='present-pack')
-											+icon('icon-loupe','present-pack__zoom-icon')
+											+icon('icon-loupe','overview__zoom-icon')
 
 								+e.A.action(href='#!')
 									+e.SPAN Подарочная упаковка
